# gestao-cpm-agno

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.agno.py
agent-ui/: package-lock.json
app/: agent_os.py  main.py
app/agents/: agente_milhas.py  milhas.py  milhas_agent.py
app/agents/specialists/: acquisition.py  analyst.py
app/api/: agno_server.py
app/config/: settings.py
app/core/: database.py  enums.py  logging_config.py
app/data/: migration_add_data_transacao.sql  migration_add_observacao.sql  migration_add_subscriptions.sql  schema.sql  schema_pg.sql
app/data/migrations/dev/: 20260221_001_add_subscriptions_rollback.sql  20260221_002_add_observacao_rollback.sql  20260221_003_add_data_transacao_rollback.sql  20260223_001_add_cpm_checkpoints.sql  20260223_001_add_cpm_checkpoints_rollback.sql
app/data/migrations/prod/: 20260221_001_prod_add_subscriptions_rollback.sql  20260221_002_prod_remove_benchmark.sql  20260221_002_prod_remove_benchmark_rollback.sql  20260221_003_prod_sync_transactions_rollback.sql  20260222_001_schema_migrations_bootstrap.sql  20260222_001_schema_migrations_bootstrap_rollback.sql  20260222_002_add_unique_active_subscription.sql  20260222_002_add_unique_active_subscription_rollback.sql  20260223_001_drop_unused_tables.sql  20260223_001_drop_unused_tables_rollback.sql  20260223_002_add_cpm_checkpoints.sql  20260223_002_add_cpm_checkpoints_rollback.sql  (+3 more)
app/scripts/: escape_password.py  seed_database.py  seed_full_history.py
app/tools/: calculators.py  date_parser.py  db_manager.py  db_toolkit.py
