[project]
name = "gestao-cpm-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.2",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "psycopg[binary]>=3.2.13",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "postgres>=4.0",
    "slack-sdk>=3.39.0",
    "pydantic-settings>=2.12.0",
    "psycopg-pool>=3.3.0",
    "dateparser>=1.3.0",
]
